# demusExporter

./: .gitignore  Dockerfile  README.md  app.py  develop.py  main.py  mdb_reader.py  process_file.py  pyproject.toml  requirements.txt  test.py
.github/workflows/: publish.yml
demusExporter/: process_file.py
demusExporter/export_jacq/: pipeline.py
demusExporter/export_pladias/: pipeline.py
demusexporter/: process_file.py
demusexporter/export_dwc/: pipeline.py
demusexporter/export_dwc/columns/: base.py  col10_verbatimElevation.py  col11_occurrenceRemarks.py  col12_verbatimIdentification.py  col13_basisOfRecord.py  col1_occurrenceID.py  col2_scientificName.py  col3_recordedBy.py  col4_eventDate.py  col5_identifiedBy.py  col6_dateIdentified.py  col7_locality.py  col8_decimalLatitude.py  col9_decimalLongitude.py
demusexporter/export_jacq/: pipeline.py
demusexporter/export_pladias/: pipeline.py
export_jacq/: pipeline.py
export_jacq/columns/: col2_HerbNummer.py
export_pipeline/: mdb_query_executor.py  pipeline.py
export_pipeline/columns/: base.py  col10_Nummer.py  col11_alt_number.py  col12_datum.py  col14_det.py  col17_taxon_alt.py  col18_nation_engl.py  col19_provinz.py  col20_fundort.py  col20_provinz.py  col21_fundort.py  col22_Habitat.py  col24_Bemerkungen.py  col25_col32_coords.py  col2_HerbNummer.py  col36_col37_altitude.py  col50_helper.py  col6_taxon.py  col7_Sammler.py
export_pladias/: pipeline.py
export_pladias/columns/: col13.py  col14.py  col15.py  col17.py  col2.py  col3.py  col4.py  col6.py  col7.py  col8.py
templates/: index.html
(+8 files in other folders)
