[tool.poetry]
name = "demusexporter"
version = "0.2.1"
description = "Convert MDB export from DEMUS to Pladias or JACQ format"
authors = [
    "Petr Novotný <krkabol@gmail.com>"
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^3"
openpyxl = "^3"
sqlalchemy = "^2"
mdbtools = "^0"
pyodbc = "^5"